// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Group renders correctly 1`] = `
<styled.fieldset>
  <Box
    as="legend"
    fontSize="200"
    lineHeight="200"
    mb="100"
  >
    Checkbox Label
  </Box>
  <span>
    Checkbox Child
  </span>
</styled.fieldset>
`;

exports[`Checkbox Group renders correctly on required 1`] = `
<styled.fieldset>
  <Box
    as="legend"
    fontSize="200"
    lineHeight="200"
    mb="100"
  >
    Checkbox Label
    <Box
      aria-hidden="true"
      as="span"
      pr="200"
    >
      *
    </Box>
  </Box>
  <span>
    Checkbox Child
  </span>
</styled.fieldset>
`;
